--- a/style.css
+++ b/style.css
@@ -3,3 +3,77 @@
   width: 100%;
   margin: auto;
 }
+
+#mafoot1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  background-color: #f3e7e0;
+  font-family: sans-serif;
+}
+
+#mafoot1 > p:nth-child(1) {
+  font-weight: 500;
+}
+
+#mafoot1 > p:nth-child(2) {
+  font-size: 13.5px;
+}
+
+#mafoot1 a {
+  color: black;
+  font-size: 16px;
+}
+#mamain {
+  display: flex;
+  justify-content: space-around;
+  font-size: 14px;
+}
+#malist1 {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+#malist2 {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+#malist3 {
+  width: 330px;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+#malist3 {
+  line-height: 1.5;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+#malist3 input {
+  padding: 10px;
+  margin-top: 10px;
+  width: 320px;
+  font-size: 14px;
+}
+
+#malist4 {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+#malist5 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+#macopy {
+  margin-left: 90px;
+  margin-top: 20px;
+  font-size: 12px;
+  color: gray;
+}
