--- a/style.css
+++ b/style.css
@@ -193,6 +193,80 @@ input {
 
 /* ============== Rahul and pradeep ================ */
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#rpCard1 {
+  /* border: 2px solid black; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #rpCard2 {
+  /* border: 2px solid black; */
+  display: grid;
+  grid-template-columns: repeat(3 , 1fr);
+  padding: 1em;
+  gap: 1.2%;
+ 
+}
+
+#rpCard2 img , #rpCard3 img {
+  width: 100%;
+  height: 100%;
+}
+
+#rpCard2 p , #rpCard3 p {
+  text-align: center;
+  font-size: 1em;
+}
+
+#rCard-heading3 {
+  text-align: center;
+  padding: 1em;
+}
+
+#rpCard3 {
+  /* border: 2px solid black; */
+  display: grid;
+  grid-template-columns: repeat(4 , 1fr);
+}
+
+
+#rpCard3  div , #rpCard2 div {
+  /* border: 2px solid black; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   
 }
+
+
+/* 
+#rpCard2 > img:nth-of-type(1) {
+  
+}
+
+#rpCard2 > img:nth-of-type(2) {
+  
+}
+
+#rpCard2 > img:nth-of-type(3) {
+  
+}
+
+#rpCard2 > img:nth-of-type(4) {
+  
+}
+
+#rpCard2 > img:nth-of-type(5) {
+ 
+}
+
+#rpCard2 > img:nth-of-type(6) {
+  
+} */
