--- a/style.css
+++ b/style.css
@@ -306,6 +306,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* margin-top: 10px; */
 }
 
 #rpCard1 {
@@ -313,6 +314,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 25px;
 }
 
 #rpCard2 {
@@ -325,7 +327,7 @@ main {
 }
 
 #rpCard2 img , #rpCard3 img {
-  width: 100%;
+  width: 120%;
   height: 100%;
 }
 
