--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ body {
 }
 
 #st-navP1 > div:nth-of-type(1) span > img{
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
 }
 
@@ -100,6 +100,7 @@ body {
   margin-top: 15px;
   display: flex;
   align-items:center;
+  font-size: 14px;
   font-weight: bold;
   justify-content: space-between;
 }
@@ -134,29 +135,59 @@ body {
 .st-content > div > a{
   padding: 5px;
   text-transform: capitalize;
+  font-size: 14px;
   font-weight: 400;
   font-family: Arial, sans-serif;
+}
+
+.st-button{
+  padding: 10px;
+  border: none;
+  background: hsl(0, 0%, 90%);
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 450;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+.st-button:hover{
+  transform: scale(1.1);
 }
 
 .st-content > div > a:hover{
   text-decoration: underline;
 }
 
-.st-dropdown:hover .st-content {
-  display: flex; /* Change display when .st-dropdown is hovered */
+.st-designersDD{
+  /* display: none; */
+}
+
+.st-clothingDD{
+  /* display: none; */
+}
+
+.st-bagsDD{
+  /* display: none; */
+}
+
+.st-accessroiesDD{
+  /* display: none; */
+}
+
+.st-beautyDD{
+  /* display: none; */
 }
 
 .st-dropdown .st-content{
   background-color: white;
-  display: none;
   position: absolute;
+  display:none;
   border-radius: 10px;
   transition: display 1s ease;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
-
-
-
 
 
 
