--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 #st-navP1 > div > span {
-  margin: 8px;
+  padding: 8px;
   cursor: pointer;
 }
 
@@ -47,6 +47,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: Arial, sans-serif;
 }
 
 #st-navP1 > div > span:hover {
@@ -77,6 +78,9 @@ body {
   font-size: 38px;
   font-weight: 1000;
   cursor: default;
+  position: absolute;
+  right: 47%;
+  top: 8%;
 }
 
 #st-navP2 > div:nth-of-type(3) > a {
@@ -100,6 +104,7 @@ body {
 
 #st-navP3 > div {
   margin-top: 15px;
+  margin: 15px;
   display: flex;
   align-items: center;
   font-size: 14px;
@@ -116,6 +121,10 @@ body {
 
 #st-navP3 > div > div > a:hover {
   text-decoration: underline;
+}
+
+#st-navP3>div>div>div>div>img:hover {
+  opacity: 0.40;
 }
 
 .st-content > div {
@@ -259,6 +268,74 @@ body {
   display: flex;
   left: 55%;
 }
+/* ///////////////////////////////////////////////////////////////// */
+
+.st-heading{
+  text-transform: uppercase;
+  font-family: Arial, sans-serif;
+  font-size: 27px;
+  letter-spacing: 1px;
+  margin: 22px 0px 16px;
+  font-weight: 540;
+}
+.st-cardContainer{
+  width: 95%;
+  margin: auto;
+  height: auto;
+  /* border: 1px solid red; */
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+
+.st-cardContainer>div{
+  display: block;
+  flex-direction: column;
+  margin: auto;
+  width: 93%;
+  height: auto;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+}
+
+.st-cardContainer>div:hover{
+  opacity: 0.45;
+}
+
+.st-cardContainer>div>img{
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.st-cardContainer>div>h4{
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: capitalize;
+  font-size: 20px;
+  margin: 0;
+  padding: 0;
+  margin-top: 10px;
+  padding-left: 10px;
+}
+
+.st-cardContainer>div>p{
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  margin: 0;
+  padding: 0;
+  margin-top: 10px;
+  padding-left: 10px;
+}
+
+.st-cardContainer>div>p:nth-of-type(2){
+  margin-bottom: 50px;
+}
+
 /* ////////////////////////////syed taqi /////////////////////////////*/
 
 #mafoot1 {
