--- a/style.css
+++ b/style.css
@@ -123,8 +123,8 @@ body {
   text-decoration: underline;
 }
 
-#st-navP3>div>div>div>div>img:hover {
-  opacity: 0.40;
+#st-navP3 > div > div > div > div > img:hover {
+  opacity: 0.4;
 }
 
 .st-content > div {
@@ -276,7 +276,7 @@ body {
 }
 /* ///////////////////////////////////////////////////////////////// */
 
-.st-heading{
+.st-heading {
   text-transform: uppercase;
   font-family: Arial, sans-serif;
   font-size: 27px;
@@ -284,7 +284,7 @@ body {
   margin: 22px 0px 16px;
   font-weight: 540;
 }
-.st-cardContainer{
+.st-cardContainer {
   width: 95%;
   margin: auto;
   height: auto;
@@ -296,7 +296,7 @@ body {
   margin-bottom: 20px;
 }
 
-.st-cardContainer>div{
+.st-cardContainer > div {
   display: block;
   flex-direction: column;
   margin: auto;
@@ -307,17 +307,17 @@ body {
   justify-content: center;
 }
 
-.st-cardContainer>div:hover{
+.st-cardContainer > div:hover {
   opacity: 0.45;
 }
 
-.st-cardContainer>div>img{
+.st-cardContainer > div > img {
   width: 100%;
   height: 100%;
   border-radius: 10px;
 }
 
-.st-cardContainer>div>h4{
+.st-cardContainer > div > h4 {
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   text-transform: capitalize;
@@ -328,7 +328,7 @@ body {
   padding-left: 10px;
 }
 
-.st-cardContainer>div>p{
+.st-cardContainer > div > p {
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
@@ -338,11 +338,37 @@ body {
   padding-left: 10px;
 }
 
-.st-cardContainer>div>p:nth-of-type(2){
+.st-cardContainer > div > p:nth-of-type(2) {
   margin-bottom: 50px;
 }
 
 /* ////////////////////////////syed taqi /////////////////////////////*/
+.btn1 {
+  background-color: black;
+  color: white;
+  padding: 15px 30px;
+  width: 300px;
+}
+.btn2 {
+  padding: 15px 30px;
+  width: 300px;
+}
+#backpage {
+  padding: 10px 40px;
+  color: aliceblue;
+  background-color: blue;
+  border: 1px solid blue;
+  border-radius: 5px;
+}
+.pcardstyle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 150px;
+}
+.pcardstyle img {
+  width: 500px;
+}
 
 #mafoot1 {
   display: flex;
