--- a/style.css
+++ b/style.css
@@ -348,10 +348,12 @@ body {
   color: white;
   padding: 15px 30px;
   width: 300px;
+  margin: 5px;
 }
 .btn2 {
   padding: 15px 30px;
   width: 300px;
+  margin: 5px;
 }
 #backpage {
   padding: 10px 40px;
@@ -359,6 +361,7 @@ body {
   background-color: blue;
   border: 1px solid blue;
   border-radius: 5px;
+  margin: 10px;
 }
 .pcardstyle {
   display: flex;
