--- a/style.css
+++ b/style.css
@@ -285,10 +285,9 @@ body {
   font-weight: 540;
 }
 .st-cardContainer{
-  width: 95%;
+  width: 85%;
   margin: auto;
   height: auto;
-  /* border: 1px solid red; */
   box-sizing: border-box;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -296,28 +295,28 @@ body {
   margin-bottom: 20px;
 }
 
-.st-cardContainer>div{
+.st-cardContainer>a>div{
   display: block;
   flex-direction: column;
   margin: auto;
-  width: 93%;
+  width: 95%;
   height: auto;
   cursor: pointer;
   align-items: center;
   justify-content: center;
 }
 
-.st-cardContainer>div:hover{
+.st-cardContainer>a>div:hover{
   opacity: 0.45;
 }
 
-.st-cardContainer>div>img{
+.st-cardContainer>a>div>img{
   width: 100%;
   height: 100%;
   border-radius: 10px;
 }
 
-.st-cardContainer>div>h4{
+.st-cardContainer>a>div>h4{
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   text-transform: capitalize;
@@ -328,7 +327,7 @@ body {
   padding-left: 10px;
 }
 
-.st-cardContainer>div>p{
+.st-cardContainer>a>div>p{
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
@@ -338,8 +337,10 @@ body {
   padding-left: 10px;
 }
 
-.st-cardContainer>div>p:nth-of-type(2){
+.st-cardContainer>a>div>p:nth-of-type(2){
   margin-bottom: 50px;
+  padding: 5px;
+  text-decoration: underline;
 }
 
 /* ////////////////////////////syed taqi /////////////////////////////*/
