--- a/style.css
+++ b/style.css
@@ -343,6 +343,32 @@ body {
   text-decoration: underline;
 }
 
+
+#st-wishlist{
+  width: 100;
+  height: 10vh;
+  align-items: start;
+  background-color: #f5f5f5;
+}
+
+#st-wishlist>div{
+  display: flex;
+}
+
+#st-wishlist>div>a{
+  margin: 12px;
+  margin-top: 50px;
+  border-radius: 6px;
+  font-family: Arial, sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+}
+
+#st-wishlist>div>a:hover{
+  background-color: white;
+  cursor: pointer;
+}
+
 /* ////////////////////////////syed taqi  style ends here/////////////////////////////*/
 
 #mafoot1 {
