--- a/style.css
+++ b/style.css
@@ -274,6 +274,31 @@ body {
   display: flex;
   left: 55%;
 }
+
+#st-wishlist {
+  width: 100;
+  height: 10vh;
+  align-items: start;
+  background-color: #f5f5f5;
+}
+
+#st-wishlist > div {
+  display: flex;
+}
+
+#st-wishlist > div > a {
+  margin: 12px;
+  margin-top: 50px;
+  border-radius: 6px;
+  font-family: Arial, sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+}
+
+#st-wishlist > div > a:hover {
+  background-color: white;
+  cursor: pointer;
+}
 /* ///////////////////////////////////////////////////////////////// */
 
 .st-heading {
@@ -285,7 +310,7 @@ body {
   font-weight: 540;
 }
 
-.st-cardContainer{
+.st-cardContainer {
   width: 85%;
   margin: auto;
   height: auto;
@@ -296,7 +321,7 @@ body {
   margin-bottom: 20px;
 }
 
-.st-cardContainer>a>div{
+.st-cardContainer > a > div {
   display: block;
   flex-direction: column;
   margin: auto;
@@ -307,17 +332,17 @@ body {
   justify-content: center;
 }
 
-.st-cardContainer>a>div:hover{
+.st-cardContainer > a > div:hover {
   opacity: 0.45;
 }
 
-.st-cardContainer>a>div>img{
+.st-cardContainer > a > div > img {
   width: 100%;
   height: 100%;
   border-radius: 10px;
 }
 
-.st-cardContainer>a>div>h4{
+.st-cardContainer > a > div > h4 {
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   text-transform: capitalize;
@@ -328,7 +353,7 @@ body {
   padding-left: 10px;
 }
 
-.st-cardContainer>a>div>p{
+.st-cardContainer > a > div > p {
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
@@ -338,8 +363,7 @@ body {
   padding-left: 10px;
 }
 
-
-.st-cardContainer>a>div>p:nth-of-type(2){
+.st-cardContainer > a > div > p:nth-of-type(2) {
   margin-bottom: 50px;
   padding: 5px;
   text-decoration: underline;
@@ -702,8 +726,6 @@ main {
   
 } */
 
-
-
 /* pradeep  */
 
 #deepMain {
@@ -713,16 +735,16 @@ main {
 }
 
 #deepSideBar {
-  flex:2;
+  flex: 2;
 
   display: flex;
   flex-direction: column;
   /* align-items: flex-start; */
   align-self: flex-start;
-  gap : 10px;
+  gap: 10px;
 }
 
-#deepSideBar> a:hover {
+#deepSideBar > a:hover {
   text-decoration: underline;
 }
 
