--- a/style.css
+++ b/style.css
@@ -431,6 +431,13 @@ body {
   justify-content: space-around;
   font-size: 14px;
 }
+.mabtnclass {
+  padding: 8px 12px;
+  background-color: black;
+  color: white;
+  font-weight: 600;
+  border-radius: 8px;
+}
 #malist1 {
   display: flex;
   flex-direction: column;
