updated css for designer page

--- a/style.css
+++ b/style.css
@@ -762,6 +762,10 @@ input {
   gap: 10px;
 }
 
+#deepSideBar> a {
+  padding-left: 10%;
+}
+
 #deepSideBar > a:hover {
   text-decoration: underline;
 }
